# universaltalk_websocket

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/authorization/: authenticator.rs
src/handler/: mod.rs  redis_handler.rs  websocket_handler.rs
src/session/: session.rs
